Finish project version 1.0

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#ffd205",
-  "background_color": "#ffd205",
+  "background_color": "#ffd205"
 }
